Cycles viewport not showing certain material changes when using GPU compute (2.93) #85010

Closed
opened 2021-01-24 07:24:15 +01:00 by Alaska · 11 comments
Member

System Information:
Operating system: Linux-5.10.0-1-amd64-x86_64-with-debian-bullseye 64 Bits
Graphics card: GeForce RTX 3070 460.32.03

Blender Version:
Broken: version: 2.93.0 ded9484925 2021-01-23 21:10
Worked: 2.91 release, Prior to 2.93.0 bbe6d44928 2021-01-22 15:08

Short description of error:
The Cycles viewport will not show a change a change in materials when a material is assigned to a new face when rendering with GPU compute (Tested CUDA and OptiX). CPU rendering does not appear to be affected.

Exact steps for others to reproduce the error:

  1. In a new scene, change the render engine to Cycles and switch rendering method to GPU Compute
  2. Change the 3D viewport to the Rendered viewport mode.
  3. Select the cube and give it a second material slot
  4. With the cube selected, enter edit mode.
  5. Select a face on the cube and assign the second material slot to that face.
  6. Make changes to the material in the second slot (E.G. Change the BSDF or change the colour, etc). These changes will not appear in the 3D viewport until you have exited and re-entered the Rendered viewport mode. This issue does not occur with CPU rendering based on my testing so far.

Here's a video demonstrating the issue:
#85010 - Missing viewport updates.mp4

**System Information:** Operating system: Linux-5.10.0-1-amd64-x86_64-with-debian-bullseye 64 Bits Graphics card: GeForce RTX 3070 460.32.03 **Blender Version:** Broken: version: 2.93.0 `ded9484925` 2021-01-23 21:10 Worked: 2.91 release, Prior to 2.93.0 `bbe6d44928` 2021-01-22 15:08 **Short description of error:** The Cycles viewport will not show a change a change in materials when a material is assigned to a new face when rendering with GPU compute (Tested CUDA and OptiX). CPU rendering does not appear to be affected. **Exact steps for others to reproduce the error:** 1. In a new scene, change the render engine to `Cycles` and switch rendering method to `GPU Compute` 2. Change the 3D viewport to the `Rendered` viewport mode. 3. Select the cube and give it a second material slot 4. With the cube selected, enter edit mode. 5. Select a face on the cube and assign the second material slot to that face. 6. Make changes to the material in the second slot (E.G. Change the BSDF or change the colour, etc). These changes will not appear in the 3D viewport until you have exited and re-entered the `Rendered` viewport mode. This issue does not occur with CPU rendering based on my testing so far. Here's a video demonstrating the issue: [#85010 - Missing viewport updates.mp4](https://archive.blender.org/developer/F9594999/T85010_-_Missing_viewport_updates.mp4)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Author
Member

Bisecting points to bbe6d44928 as the cause. CC @kevindietrich

Bisecting points to bbe6d44928 as the cause. CC @kevindietrich
Kévin Dietrich self-assigned this 2021-01-24 10:57:04 +01:00

Added subscriber: @costa

Added subscriber: @costa

With my experience this bug exists not only on rendering but also viewport shading. If I switch or add a matcap, ambient occlusion or whatever I won't see a change until I cycle through shadings.

With my experience this bug exists not only on rendering but also viewport shading. If I switch or add a matcap, ambient occlusion or whatever I won't see a change until I cycle through shadings.
Author
Member

In #85010#1099667, @costa wrote:
With my experience this bug exists not only on rendering but also viewport shading. If I switch or add a matcap, ambient occlusion or whatever I won't see a change until I cycle through shadings.

I believe issue you describe is unrelated to the bug described in this task and thus probably won't be fixed when this bug is fixed. Please create a new task detailing the issue you're describing. However, I'm fairly sure I saw a similar report recently for the exact issue you're describing, I'm just having trouble finding it at the moment.

> In #85010#1099667, @costa wrote: > With my experience this bug exists not only on rendering but also viewport shading. If I switch or add a matcap, ambient occlusion or whatever I won't see a change until I cycle through shadings. I believe issue you describe is unrelated to the bug described in this task and thus probably won't be fixed when this bug is fixed. Please create a new task detailing the issue you're describing. However, I'm fairly sure I saw a similar report recently for the exact issue you're describing, I'm just having trouble finding it at the moment.

Added subscriber: @rboxman

Added subscriber: @rboxman

In #85010#1099667, @costa wrote:
With my experience this bug exists not only on rendering but also viewport shading. If I switch or add a matcap, ambient occlusion or whatever I won't see a change until I cycle through shadings.

The viewport issue is noted here #84717 and has already been root caused to another checkin. It's a different issue.

> In #85010#1099667, @costa wrote: > With my experience this bug exists not only on rendering but also viewport shading. If I switch or add a matcap, ambient occlusion or whatever I won't see a change until I cycle through shadings. The viewport issue is noted here #84717 and has already been root caused to another checkin. It's a different issue.

This issue was referenced by 7a0281914e

This issue was referenced by 7a0281914ec94e6a495cc354844e91d88b8b18ae

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Author
Member

Just confirming that testing with latest master shows this issues is fixed. Thank you @kevindietrich

Just confirming that testing with latest master shows this issues is fixed. Thank you @kevindietrich
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85010
No description provided.