Fix T85010: Cycles viewport not showing certain material changes when using GPU compute

Modifications to triangle shader association were not considered when checking for updates and the associated device data array was not tagged as modified so it was not resent to the device(s).